--- a/public/index.html
+++ b/public/index.html
@@ -38,18 +38,18 @@
 	<main>
 		<section class="swatches">
 			<ul>
-				<li><a href="https://thesemicolons.social/discord">Discord</a></li>
-				<li><a href="https://thesemicolons.social/tip">Donate</a></li>
-				<li><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
-				<li><a href="https://thesemicolons.social/instagram">Instagram</a></li>
-				<li><a href="https://thesemicolons.social/patreon">Patreon</a></li>
-				<li><a href="https://thesemicolons.social/steam">Steam</a></li>
-				<li><a href="https://thesemicolons.social/throne">Throne</a></li>
-				<li><a href="https://thesemicolons.social/Tip">Tip</a></li>
-				<li><a href="https://thesemicolons.social/twitch">Twitch</a></li>
-				<li><a href="https://thesemicolons.social/twitter">Twitter</a></li>
-				<li><a href="https://thesemicolons.social/website">Website</a></li>
-				<li><a href="https://thesemicolons.social/youtube">YouTube</a></li>
+				<li><img alt="QR Code Discord" src="/images/qr_discord.png"/><br /><a href="https://thesemicolons.social/discord">Discord</a></li>
+				<li><img alt="QR Code Donate" src="/images/qr_donate.png"/><br /><a href="https://thesemicolons.social/tip">Donate</a></li>
+				<li><img alt="QR Code Fanhouse" src="/images/qr_fanhouse.png"/><br /><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
+				<li><img alt="QR Code Instagram" src="/images/qr_instagram.png"/><br /><a href="https://thesemicolons.social/instagram">Instagram</a></li>
+				<li><img alt="QR Code Patreon" src="/images/qr_patreon.png"/><br /><a href="https://thesemicolons.social/patreon">Patreon</a></li>
+				<li><img alt="QR Code Steam" src="/images/qr_steam.png"/><br /><a href="https://thesemicolons.social/steam">Steam</a></li>
+				<li><img alt="QR Code Throne" src="/images/qr_throne.png"/><br /><a href="https://thesemicolons.social/throne">Throne</a></li>
+				<li><img alt="QR Code Tip" src="/images/qr_tip.png"/><br /><a href="https://thesemicolons.social/Tip">Tip</a></li>
+				<li><img alt="QR Code Twitch" src="/images/qr_twitch.png"/><br /><a href="https://thesemicolons.social/twitch">Twitch</a></li>
+				<li><img alt="QR Code Twitter" src="/images/qr_twitter.png"/><br /><a href="https://thesemicolons.social/twitter">Twitter</a></li>
+				<li><img alt="QR Code Website" src="/images/qr_website.png"/><br /><a href="https://thesemicolons.social/website">Website</a></li>
+				<li><img alt="QR Code YouTube" src="/images/qr_youtube.png"/><br /><a href="https://thesemicolons.social/youtube">YouTube</a></li>
 			</ul>
 		</section>
 	</main>
