Removed donate and tip links, added contribute link.

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
 	<main>
 		<section class="swatches">
 			<ul>
+				<li><img alt="QR Code Contribute" src="/images/qr_contribute.svg"/><br /><a href="https://thesemicolons.social/contribute">Contribute</a></li>
 				<li><img alt="QR Code Discord" src="/images/qr_discord.svg"/><br /><a href="https://thesemicolons.social/discord">Discord</a></li>
 				<li><img alt="QR Code Donate" src="/images/qr_donate.svg"/><br /><a href="https://thesemicolons.social/tip">Donate</a></li>
 				<li><img alt="QR Code Fanhouse" src="/images/qr_fanhouse.svg"/><br /><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
