--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
 				<li><img alt="QR Code Discord" src="/images/qr_discord.svg"/><br /><a href="https://thesemicolons.social/discord">Discord</a></li>
 				<li><img alt="QR Code Donate" src="/images/qr_donate.svg"/><br /><a href="https://thesemicolons.social/tip">Donate</a></li>
 				<li><img alt="QR Code Fanhouse" src="/images/qr_fanhouse.svg"/><br /><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
+				<li><img alt="QR Code Food" src="/images/qr_food.svg"/><br /><a href="https://thesemicolons.social/food">Food</a></li>
 				<li><img alt="QR Code Instagram" src="/images/qr_instagram.svg"/><br /><a href="https://thesemicolons.social/instagram">Instagram</a></li>
 				<li><img alt="QR Code Patreon" src="/images/qr_patreon.svg"/><br /><a href="https://thesemicolons.social/patreon">Patreon</a></li>
 				<li><img alt="QR Code Steam" src="/images/qr_steam.svg"/><br /><a href="https://thesemicolons.social/steam">Steam</a></li>
