Changed contribute to support.

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,13 @@
 	<main>
 		<section class="swatches">
 			<ul>
-				<li><img alt="QR Code Contribute" src="/images/qr_contribute.svg"/><br /><a href="https://thesemicolons.social/contribute">Contribute</a></li>
 				<li><img alt="QR Code Discord" src="/images/qr_discord.svg"/><br /><a href="https://thesemicolons.social/discord">Discord</a></li>
 				<li><img alt="QR Code Fanhouse" src="/images/qr_fanhouse.svg"/><br /><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
 				<li><img alt="QR Code Food" src="/images/qr_food.svg"/><br /><a href="https://thesemicolons.social/food">Food</a></li>
 				<li><img alt="QR Code Instagram" src="/images/qr_instagram.svg"/><br /><a href="https://thesemicolons.social/instagram">Instagram</a></li>
 				<li><img alt="QR Code Patreon" src="/images/qr_patreon.svg"/><br /><a href="https://thesemicolons.social/patreon">Patreon</a></li>
 				<li><img alt="QR Code Steam" src="/images/qr_steam.svg"/><br /><a href="https://thesemicolons.social/steam">Steam</a></li>
+				<li><img alt="QR Code Support" src="/images/qr_support.svg"/><br /><a href="https://thesemicolons.social/support">Support</a></li>
 				<li><img alt="QR Code Throne" src="/images/qr_throne.svg"/><br /><a href="https://thesemicolons.social/throne">Throne</a></li>
 				<li><img alt="QR Code Twitch" src="/images/qr_twitch.svg"/><br /><a href="https://thesemicolons.social/twitch">Twitch</a></li>
 				<li><img alt="QR Code Twitter" src="/images/qr_twitter.svg"/><br /><a href="https://thesemicolons.social/twitter">Twitter</a></li>
