--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,10 @@
 				<li><img alt="QR Code Fanhouse" src="/images/qr_fanhouse.svg"/><br /><a href="https://thesemicolons.social/fanhouse">Fanhouse</a></li>
 				<li><img alt="QR Code Food" src="/images/qr_food.svg"/><br /><a href="https://thesemicolons.social/food">Food</a></li>
 				<li><img alt="QR Code Instagram" src="/images/qr_instagram.svg"/><br /><a href="https://thesemicolons.social/instagram">Instagram</a></li>
+				<li><img alt="QR Code Live" src="/images/qr_live.svg"/><br /><a href="https://thesemicolons.social/live">Live</a></li>
+				<li><img alt="QR Code Mastodon" src="/images/qr_mastodon.svg"/><br /><a href="https://thesemicolons.social/mastodon">Mastodon</a></li>
 				<li><img alt="QR Code Patreon" src="/images/qr_patreon.svg"/><br /><a href="https://thesemicolons.social/patreon">Patreon</a></li>
+				<li><img alt="QR Code Social" src="/images/qr_social.svg"/><br /><a href="https://thesemicolons.social/social">Social</a></li>
 				<li><img alt="QR Code Steam" src="/images/qr_steam.svg"/><br /><a href="https://thesemicolons.social/steam">Steam</a></li>
 				<li><img alt="QR Code Support" src="/images/qr_support.svg"/><br /><a href="https://thesemicolons.social/support">Support</a></li>
 				<li><img alt="QR Code Throne" src="/images/qr_throne.svg"/><br /><a href="https://thesemicolons.social/throne">Throne</a></li>
